@startuml STLA_Adapter_Pattern
title STLA Desktop — Adapter Pattern
skinparam classAttributeIconSize 0

package "com.stla.patterns.adapter" {
  interface PaymentGatewayAdapter <<Adapter>> {
    + charge(token, amount, currency): boolean
    + refund(transactionId): boolean
    + getProviderName(): String
  }

  class SimulatedPaymentGateway <<ConcreteAdapter>> {
    + charge(...): boolean
    + refund(...): boolean
    + getProviderName(): String
  }

  interface ReportExportAdapter <<Adapter>> {
    + exportReport(data, filePath): void
    + getFormat(): String
  }

  class CsvReportExportAdapter <<ConcreteAdapter>> {
    + exportReport(data, filePath): void
    + getFormat(): String
  }

  note as NMissing
    **CsvExportAdapter** — Class not found in current codebase
    (use **CsvReportExportAdapter**)

    SimulatedPaymentGateway and CsvReportExportAdapter
    have **no callers** found outside patterns package.
  end note
}

PaymentGatewayAdapter <|.. SimulatedPaymentGateway
ReportExportAdapter <|.. CsvReportExportAdapter

package "com.stla.services" {
  class SupabaseStorageAdapter <<Adapter>> {
    - storage: SupabaseStorageService
    + uploadCourseThumbnail(file, courseId): String
    + uploadLessonVideo(file, courseId, lessonId): String
    + uploadResource(file, courseId, lessonId): String
  }

  class SupabaseStorageService <<Singleton>> {
    + {static} getInstance(): SupabaseStorageService
    + uploadFile(bucket, file, path): String
    + deleteFile(bucket, path): void
  }
}

SupabaseStorageAdapter --> SupabaseStorageService

package "com.stla.ui.instructor" {
  class AddCourseController
  class CourseSectionsController
}

package "com.stla.services" {
  class LessonService
  class ResourceService
  class QuestionService
}

AddCourseController --> SupabaseStorageAdapter
LessonService --> SupabaseStorageAdapter
ResourceService --> SupabaseStorageAdapter
QuestionService --> SupabaseStorageAdapter

note right of SupabaseStorageAdapter
  Adapts SupabaseStorageService REST API
  to course-specific upload paths and validation.
end note

note bottom of PaymentGatewayAdapter
  Payment flow uses PaymentStrategy instead
  of PaymentGatewayAdapter in current codebase.
end note

@enduml
